[tool.poetry]
name = "streamlit-search-result"
version = "0.1.0"
description = "A streamlit component to list results of image search."
authors = ["Tomoya Kose <tomoya@mitsuse.jp>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "search_result"}
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
pytest = "^7.3.2"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
