[tool.poetry]
name = "streamlit-image-tile"
version = "0.1.1"
description = "A streamlit component to tile images."
authors = ["Tomoya Kose <tomoya@mitsuse.jp>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "image_tile"}
]
include = [
    "image_tile/frontend/build/**/*",
]
exclude = [
    "image_tile/frontend/public",
    "image_tile/frontend/node_modules",
    "image_tile/frontend/src",
    "image_tile/frontend/tsconfig.json",
    "image_tile/frontend/package.json",
    "image_tile/frontend/package-lock.json",
]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.23.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.3.0"
black = "^23.3.0"
pytest = "^7.3.2"
flake8 = "^6.0.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
